--- a/portfolio/src/sections/sections.css
+++ b/portfolio/src/sections/sections.css
@@ -124,13 +124,17 @@ a{
 
 .projectTags{
     display: flex;
-    font-size: 18px;
+    font-size: 16px;
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    height:200px;
+    height:100%;
     margin-bottom: 15px;
     color: #44694e;
+}
+
+.projectTags:before, .projectTags:after {
+    content: none;
 }
 
 
@@ -223,8 +227,8 @@ a{
     .profilePhoto {
         margin: 20px;
         margin-top: 20px;
-        width: 180px;
-        height: 180px;
+        width: 140px;
+        height: 140px;
     }
     
     .aboutText{
@@ -263,7 +267,7 @@ a{
 
     .projectTitle{
         margin-top: 10px;
-        font-size: 20px;
+        font-size: 16px;
         color: #162219;
         font-family: "SquareFont";
         text-decoration: none;
@@ -281,7 +285,7 @@ a{
         max-width: 70%;
         color: #385540;
         text-align: justify;
-        font-size: 14px;
+        font-size: 5%;
     }
 
     .projectTags{
@@ -290,7 +294,7 @@ a{
         flex-direction: column;
         align-items: flex-end;
         justify-content: flex-end;
-        height:200px;
+        height:100%;
         margin-bottom: 5px;
     }
 
